--- a/packages/metapackage/package.json
+++ b/packages/metapackage/package.json
@@ -47,6 +47,7 @@
     "@jupyterlab/csvviewer": "^0.19.1",
     "@jupyterlab/csvviewer-extension": "^0.19.1",
     "@jupyterlab/databus": "^0.7.1",
+    "@jupyterlab/databus-extension": "^0.7.1",
     "@jupyterlab/docmanager": "^0.19.1",
     "@jupyterlab/docmanager-extension": "^0.19.1",
     "@jupyterlab/docregistry": "^0.19.1",
